--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "files": [
     "dist/"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "base64url": "^3.0.1"
+  },
   "devDependencies": {
     "@types/node": "^18.7.16",
+    "dotenv": "^16.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3",
-    "dotenv": "^16.0.2"
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "dev": "ts-node -r dotenv/config src/index.ts",
