--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dist/"
   ],
   "dependencies": {
-    "base64url": "^3.0.1"
+    "base64url": "^3.0.1",
+    "class-transformer": "^0.5.1",
+    "cross-fetch": "^3.1.5"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
@@ -29,6 +31,7 @@
   "scripts": {
     "dev": "ts-node -r dotenv/config src/index.ts",
     "build": "tsc",
+    "test": "ts-node -r dotenv/config",
     "start": "node dist/index.js || echo NOTE: run `yarn build` first",
     "prepare": "rm -rf dist && yarn build"
   }
