--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "strictPropertyInitialization": false
   },
-  "exclude": ["test"]
+  "exclude": [
+    "test"
+  ]
 }
